--- a/src/style.css
+++ b/src/style.css
@@ -6,11 +6,12 @@
 }
  body {
 	 font-family: 'Roboto', sans-serif; /* Default font is now Roboto */
-	 background-color: #ddd;
+	 background-color: #000;
 	 min-height: 100vh;
 	 display: flex;
 	 justify-content: center;
 	 align-items: center;
+  color: white; /* Set default text color to white */
 }
  .container {
 	 position: relative;
@@ -24,7 +25,6 @@
 	 width: 800px;
 	 height: 800px;
 	 background-color: white;
-	 border-radius: 50%;
 	 box-shadow: 5px 5px 10px #bbb;
 }
  .mandala .base {
@@ -34,7 +34,6 @@
 	 top: 0;
 	 width: 800px;
 	 height: 800px;
-	 border-radius: 50%;
 	 opacity: 0;
 	 transition: opacity 0.5s;
 }
@@ -48,7 +47,6 @@
 	 top: 0;
 	 width: 800px;
 	 height: 800px;
-	 border-radius: 50%;
 }
  .controllers {
 	 position: absolute;
@@ -87,13 +85,39 @@
 	 font-size: 1em;
 	 text-align: center;
 	 font-style: normal;
+  color: black; /* Keep input text color black for visibility */
 }
  .controllers .color {
 	 font-size: 1em;
 	 width: 100%;
 	 height: 2.5em;
 	 padding: 0;
+  -webkit-appearance: none; /* Remove default styling */
+  -moz-appearance: none;
+  appearance: none;
+  border: 1px solid #fff; /* White border */
+  background-color: #333; /* Darker background for contrast */
+  border-radius: 5px; /* Rounded corners */
+  cursor: pointer;
 }
+.controllers .color::-webkit-color-swatch-wrapper {
+  padding: 2px; /* Adjust swatch wrapper padding in WebKit browsers */
+}
+
+.controllers .color::-webkit-color-swatch {
+  border: none; /* Remove border from color swatch in WebKit browsers */
+  border-radius: 3px; /* Rounded corners for swatch */
+}
+
+.controllers .color::-moz-color-swatch-wrapper {
+  padding: 2px; /* Adjust swatch wrapper padding in Firefox */
+}
+
+.controllers .color::-moz-color-swatch {
+  border: none; /* Remove border from color swatch in Firefox */
+  border-radius: 3px; /* Rounded corners for swatch */
+}
+
 
  .controllers label + label {
 	 margin-top: 0.5em;
@@ -112,6 +136,7 @@
 	 margin: 0.25em;
 	 font-style: normal; /* explicitly set to normal */
 	 cursor: pointer; /* Indicate button is clickable */
+  color: white; /* Button text color white */
 }
  .controllers .buttons button:hover {
   background-color: rgba(255, 255, 255, 0.2); /* Add a slight hover effect */
